--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -297,16 +297,15 @@ Strategic goal to manage and disclose (biodiversity) data
 
 ### Guidelines of the open data policy
 
-1. All scientific data for which the (EV) INBO is (co-)owner are covered by this policy and can be published as open data, excluding legal exceptions.
-2. Data are eligible for publication at the earliest 12 months after collecting.
-3. Raw data will be published.
-4. Result data associated with a scientific article, report, or advice will be released with the publication.
-5. Data are published as open data, as defined by the Open Definition, under the Creative Commons Zero waiver.
-6. Published datasets reference the INBO norms for data use.
-7. Published data are sufficiently documented with metadata.
-8. All upcoming research projects require a data management plan (DMP).
-9. Researchers apply the open data policy.
-10. The INBO Information & Data Center supports researchers in the application of the open data policy.
+> 1. Policy applies to data we own & is bound by legal exceptions
+> 2. Data is eligible for publication 12 months after collecting
+> 3. Aim to publish source data (from major data systems)
+> 4. Aim to publish result data (associated with publications)
+> 5. Publish as open data (defined by Open Definition)
+> 6. Publish under CC0 waiver
+> 7. Encourage proper use with INBO norms for data use
+> 8. Document data with metadata
+> 9. Start using data management plans (DMP)
 
 ### INBO on GBIF
 
