--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -527,7 +527,7 @@ shapes %>%
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
   geom_text(data = texts, aes(label = label, colour = phase == 1), size = 2, show.legend = FALSE) +
-  scale_colour_manual(values = c("TRUE" = inbo.hoofd, "FALSE" = inbo.steun.blauw)) +
+  scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
   theme_blank()
@@ -551,7 +551,7 @@ shapes %>%
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
   geom_text(data = texts, aes(label = label, colour = phase == 2), size = 2, show.legend = FALSE) +
-  scale_colour_manual(values = c("TRUE" = "white", "FALSE" = inbo.steun.blauw)) +
+  scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
   theme_blank()
@@ -599,7 +599,7 @@ shapes %>%
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
   geom_text(data = texts, aes(label = label, colour = phase == 4), size = 2, show.legend = FALSE) +
-  scale_colour_manual(values = c("TRUE" = inbo.steun.donkerroos, "FALSE" = inbo.steun.blauw)) +
+  scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
   theme_blank()
@@ -623,7 +623,7 @@ shapes %>%
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
   geom_text(data = texts, aes(label = label, colour = phase == 5), size = 2, show.legend = FALSE) +
-  scale_colour_manual(values = c("TRUE" = "black", "FALSE" = inbo.steun.blauw)) +
+  scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
   theme_blank()
