Rephrase a number of things

--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Supporting scientific research at INBO"
+title: "How we support scientific research at INBO"
 author: "D. Brosens, P. Desmet, D. Du Seuil, I. Jansen, E. Lommelen, J. Loos, T. Milotic, T. Onkelinx, P. Quataert, F. Piesschaert, H. Van Calster, T. Van Daele, F. Vanderhaeghe, G. Van Spaendonck, S. Van Hoey, P. Verschelde, T. Westra, C. Wils"
 date: "April 28, 2017"
 output:
@@ -150,18 +150,18 @@ But what does that mean and how did we get there?
 
 Open data and content can be **freely used, modified, and shared** by **anyone** for **any purpose**.
 
-### Considered open if following requirements are met
+### Open data
 
-> 1. With open license or status
-> 2. Accessible
-> 3. Machine readable
-> 4. In open format
+1. Has an open license (legal status)
+2. Is accessible
+3. Is machine readable
+4. Is provided in an open format
 
 ### Why open data for research?
 
-> - Increase discoverability
+> - Discoverability
 > - Increase potential use
-> - Increase collaborations
+> - Collaborations
 > - Transparent science
 
 ### Move towards open data
@@ -175,7 +175,7 @@ Open data and content can be **freely used, modified, and shared** by **anyone**
 
 Strategic goal to manage and disclose (biodiversity) data
 
-### 2011: First dataset published on GBIF
+### 2011: Publication of the first dataset on GBIF
 
 ![http://www.gbif.org/dataset/271c444f-f8d8-4986-b748-e7367755c0c1](gbif_florabank.png)\ 
 
@@ -185,7 +185,7 @@ Strategic goal to manage and disclose (biodiversity) data
 
 ### Data publication process
 
-- Format data to international Darwin Core standard
+- Format data to the international Darwin Core standard
 - Document data with metadata (also standardized)
 - Publish dataset online
 - Register dataset with GBIF
@@ -221,19 +221,18 @@ Strategic goal to manage and disclose (biodiversity) data
 
 ### Guidelines of the open data policy
 
-> 1. Policy applies to data we own & is bound by legal exceptions
-> 2. Data is eligible for publication 12 months after collecting
-> 3. Aim to publish collected data (from major data systems)
-> 4. Aim to publish result data (associated with publications)
-> 5. Publish as open data (defined by Open Definition)
-> 6. Publish under CC0 waiver
-> 7. Encourage proper use with INBO norms for data use
-> 8. Document data with metadata
-> 9. Start using data management plans (DMP)
+> 1. Policy applies to **data we own** & is bound by legal exceptions
+> 2. Aim to publish **collected data** (from major data systems)
+> 3. Aim to publish **result data** (associated with publications)
+> 4. Publish as **open data** as defined by the Open Definition
+> 5. Publish under **CC0 waiver**
+> 6. Encourage proper data use with **norms**
+> 7. Document data with **metadata**
+> 8. Start using **data management plans** (DMP)
 
-### INBO on GBIF
+### We are now one of the major data publishers on GBIF
 
-![http://www.gbif.org/publisher/1cd669d0-80ea-11de-a9d0-f1765f95f18b](gbif_inbo.png)\ 
+![Gull tracking data in breeding areas](lifewatch_gulls_map.png)\ 
 
 ### Published data
 
@@ -269,7 +268,7 @@ data.frame(
 
 ![http://opendata.vlaanderen.be/organization/inbo](vodp_inbo.png)\ 
 
-### Open documentation on GitHub
+### Openly document process on GitHub
 
 ![Data publication repository](github_bird_tracking.png)\ 
 
@@ -277,8 +276,8 @@ data.frame(
 
 - International platforms/standards for abiotic data
 - Publish data associated with scientific publications and reports
-- Automate workflows
 - Think about data publication at the start of the project
+- Automate workflows
 
 # Biometry, Methodology & Quality assurance
 
@@ -794,7 +793,7 @@ shapes %>%
   theme_blank()
 ```
 
-### Aspects we can make open? \vphantom{y}
+### Which aspects can we make open? \vphantom{y}
 
 ```{r guidebook5}
 
