Add diagram slide to highlight the teams
Better transition to quote

--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -74,6 +74,10 @@ The research institute for Nature and Forest (INBO) is the Flemish research and 
 
 ![](KLEURORGANIGRAM_def.png)
 
+###
+
+![](KLEURORGANIGRAM_def_highlight.png)
+
 ### 
 
 #### Peter Diggle paraphrasing Iain Buchan
