--- a/source/20170428_flames/20170428_flames.Rmd
+++ b/source/20170428_flames/20170428_flames.Rmd
@@ -33,6 +33,8 @@ library(dplyr)
 theme_set(theme_inbo(6))
 update_geom_defaults("point", list(size = 0.5))
 update_geom_defaults("line", list(size = 0.2))
+update_geom_defaults("path", list(size = 0.2))
+update_geom_defaults("text", list(size = 2))
 theme_blank <- function(){
   theme(
     axis.title = element_blank(),
@@ -203,7 +205,8 @@ data.frame(
 ) %>%
   ggplot(aes(x = published_datasets, y = published_occurrences, label = published_years)) +
   geom_point() +
-  geom_text(vjust = -.1, hjust = -.1, size = 2) +
+  geom_path(arrow = arrow(length = unit(3, "mm"), type = "closed")) +
+  geom_text(vjust = 1.1, hjust = -.1) +
   scale_x_continuous("Number of published datasets", limits = c(0, NA), expand = c(0.07, 0)) +
   scale_y_continuous("Number of published occurrences (in millions)", limits = c(0, NA))
 ```
@@ -218,7 +221,8 @@ data.frame(
 ) %>%
   ggplot(aes(x = downloaded_downloads, y = downloaded_occurrences, label = downloaded_years)) +
   geom_point() +
-  geom_text(vjust = -.1, hjust = -.1, size = 2) +
+  geom_path(arrow = arrow(length = unit(3, "mm"), type = "closed")) +
+  geom_text(vjust = 1.1, hjust = -.1) +
   scale_x_continuous("Number of downloads (in thousands)", limits = c(0, NA), expand = c(0.07, 0)) +
   scale_y_continuous("Number of downloaded occurrences (in billions)", limits = c(0, NA))
 ```
@@ -628,7 +632,7 @@ ggplot(shapes, aes(x = x, y = y)) +
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label), size = 2) +
+  geom_text(data = texts, aes(label = label)) +
   coord_fixed() + 
   theme_blank()
 ```
@@ -650,7 +654,7 @@ shapes %>%
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label), size = 2) +
+  geom_text(data = texts, aes(label = label)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
   theme_blank()
@@ -673,7 +677,7 @@ shapes %>%
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label, colour = phase == 1), size = 2, show.legend = FALSE) +
+  geom_text(data = texts, aes(label = label, colour = phase == 1), show.legend = FALSE) +
   scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
@@ -697,7 +701,7 @@ shapes %>%
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label, colour = phase == 2), size = 2, show.legend = FALSE) +
+  geom_text(data = texts, aes(label = label, colour = phase == 2), show.legend = FALSE) +
   scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
@@ -721,7 +725,7 @@ shapes %>%
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label, colour = phase == 3), size = 2, show.legend = FALSE) +
+  geom_text(data = texts, aes(label = label, colour = phase == 3), show.legend = FALSE) +
   scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
@@ -745,7 +749,7 @@ shapes %>%
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label, colour = phase == 4), size = 2, show.legend = FALSE) +
+  geom_text(data = texts, aes(label = label, colour = phase == 4), show.legend = FALSE) +
   scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
@@ -797,7 +801,7 @@ shapes %>%
   ) +
   geom_text(
     data = open_science_texts, 
-    aes(label = label, colour = phase  %in% c(0, 2:4)), size = 2, show.legend = FALSE
+    aes(label = label, colour = phase  %in% c(0, 2:4)), show.legend = FALSE
   ) +
   scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
@@ -828,7 +832,7 @@ shapes %>%
     aes(xend = xend, yend = yend), 
     arrow = arrow(ends = "both", length = unit(2, "mm"))
   ) +
-  geom_text(data = texts, aes(label = label, colour = phase == 5), size = 2, show.legend = FALSE) +
+  geom_text(data = texts, aes(label = label, colour = phase == 5), show.legend = FALSE) +
   scale_colour_manual(values = c("TRUE" = inbo.bruinrood, "FALSE" = inbo.steun.blauw)) +
   coord_fixed() + 
   scale_fill_manual(values = c("TRUE" = inbo.steun.geelgroen, "FALSE" = NA)) +
